--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<!--    <link rel="icon" href="<%= htmlWebpackPlugin.options.url %>favicon.ico">-->
-    <link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico"/>
-    <link rel="prefetch" href="http://47.101.52.30/inner/">
+    <link rel="shortcut icon" type="image/x-icon" href="book.svg"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
