--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,122 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="book.svg"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <style>
+          .container {
+              height: 100vh;
+              width: 100vw;
+          }
+
+          .loader {
+              height: 20px;
+              width: 250px;
+              position: absolute;
+              top: 0;
+              bottom: 0;
+              left: 0;
+              right: 0;
+              margin: auto;
+          }
+          .loader .lt {
+              animation-name: loader;
+              animation-timing-function: ease-in-out;
+              animation-duration: 3s;
+              animation-iteration-count: infinite;
+              height: 20px;
+              width: 20px;
+              border-radius: 100%;
+              background-color: black;
+              position: absolute;
+              border: 2px solid white;
+          }
+          .loader .lt:first-child {
+              background-color: #8cc759;
+              animation-delay: 0.5s;
+          }
+          .loader .lt:nth-child(2) {
+              background-color: #8c6daf;
+              animation-delay: 0.4s;
+          }
+          .loader .lt:nth-child(3) {
+              background-color: #ef5d74;
+              animation-delay: 0.3s;
+          }
+          .loader .lt:nth-child(4) {
+              background-color: #f9a74b;
+              animation-delay: 0.2s;
+          }
+          .loader .lt:nth-child(5) {
+              background-color: #60beeb;
+              animation-delay: 0.1s;
+          }
+          .loader .lt:nth-child(6) {
+              background-color: #fbef5a;
+              animation-delay: 0s;
+          }
+          .loader .ltt {
+              position: absolute;
+              top: 200%;
+              left: 0;
+              right: 0;
+              width: 4rem;
+              margin: auto;
+          }
+          .loader .ltt:after {
+              content: "Loading";
+              font-weight: bold;
+              animation-name: loading-text;
+              animation-duration: 3s;
+              animation-iteration-count: infinite;
+          }
+
+          @keyframes loader {
+              15% {
+                  transform: translateX(0);
+              }
+              45% {
+                  transform: translateX(230px);
+              }
+              65% {
+                  transform: translateX(230px);
+              }
+              95% {
+                  transform: translateX(0);
+              }
+          }
+          @keyframes loading-text {
+              0% {
+                  content: "Loading";
+              }
+              25% {
+                  content: "Loading.";
+              }
+              50% {
+                  content: "Loading..";
+              }
+              75% {
+                  content: "Loading...";
+              }
+          }
+
+      </style>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
+<!--    <noscript>-->
+<!--      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>-->
+<!--    </noscript>-->
+    <div id="app">
+        <div class="container">
+            <div class="loader">
+                <div class="lt"></div>
+                <div class="lt"></div>
+                <div class="lt"></div>
+                <div class="lt"></div>
+                <div class="lt"></div>
+                <div class="lt"></div>
+                <div class="ltt"></div>
+            </div>
+        </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
